--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon ./server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "author": "joyce azevedo",
   "license": "ISC",
@@ -18,5 +18,3 @@
     "nodemon": "^2.0.1"
   }
 }
-
-//meu
